Adjusted styling on calories.html: Removed duplicate ids which were relevant to index.html and replaced with actual individual ids for calories page, such as calories-main. Added container divs to wrap each column, one for the food list and one for the calorie calculator.  Within the main container Removed container class from the two main sections within each column. This prevents overlap caused by the two columns. Removed margin-top from calorie-container because this was causing that column to not be level with the other column on larger screens.

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -34,6 +34,12 @@ hr {
     margin-bottom: 50px; 
 }
 
+#main-calorie {
+    margin-right: 50px; 
+    margin-left: 50px; 
+    margin-bottom: 50px; 
+}
+
 #search-container {
     text-align: center; 
     margin-bottom: 30px; 
@@ -90,8 +96,12 @@ hr {
 }
 
 #calorie-container {
-    margin-top: 14px;
+    /*margin-top: 14px;*/
     margin-bottom: 30px;
+}
+
+#calorie-calculator {
+    text-align: center; 
 }
 
 .calorie-output {
